<resources>
    <string name="app_name">MM SNAP</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">MM SNAP</string>
    <string name="nav_header_subtitle">kospiro@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_about">About</string>
    <string name="summary_about">MMSNAP is a research project aiming to provide help to people facing multimorbidity!</string>
    <string name="app_version">1.0</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="title_send_feedback">Send Feedback</string>
    <string name="title_faq">FAQ</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="url_faq">https://www.mmsnap.info/faq/</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="url_privacy">https://www.mmsnap.info/privacy-policy/</string>
    <string name="title_terms">Terms &amp; Conditions</string>
    <string name="url_terms">https://www.mmsnap.info/terms-of-service/</string>
    <string name="title_version">Version</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="username">username</string>
    <string name="key_username">key_username</string>
    <string name="title_username">Username</string>
    <string name="password">password</string>
    <string name="key_password">key_password</string>
    <string name="title_password">Password</string>
    <string name="mm_snap_btn_text">MM-SNAP</string>
    <string name="assessments_btn_txt">ASSESSMENTS</string>
    <string name="education_btn_txt">EDUCATION</string>
    <string name="if_then_btn_txt">IF - THEN</string>
    <string name="agents_btn_txt">AGENTS</string>
    <string name="title_subcategory_list">Subcategories</string>
    <string name="title_subcategory_detail">Subcategory Detail</string>
    <string name="title_activity_mmsnap">MM SNAP</string>
    <string name="what_this_app_is_for">WHAT THIS APP IS FOR</string>
    <string name="about_multimorbidity_mm">ABOUT MULTI - MORBIDITY MM</string>
    <string name="the_association_between_mm_mb">THE ASSOCIATION BETWEEN MM - MB</string>
    <string name="about_multibehaviour_mb">ABOUT MULTI - BEHAVIOUR MB</string>
    <string name="how_to_use_this_app">HOW TO USE THIS APP</string>
    <string name="how_to_use_this_app_text">My MM SNAP is a mobile health application aiming to support, your efforts on changing multiple targeted health risk behaviours (Smoking, Nutrition, Alcohol, Physical activity) that while they are involved in the progression of your Multimorbidity health issue you still find difficult to change. In main page you see the main five steps of the app. You can navigate yourself in each section you want but this is something strictly recommended for experienced users. For new users it is highly suggested to follow the step by step process as present here to optimize your ability to obtain your goal.&lt;br>&lt;br>
        The first step of this process is to start from the “My MM SNAP” section. Within this section you will find general information about “what this app is for” and “how to use this app” alongside educational information on the health issues that are under examination such as Multimorbidity (MM), Multibehaviour (MB) and the importance of multiple behavioural change as a self-management process.&lt;br>&lt;br>
        Following the process, the next step is to go at the “Assessment” section. There, by completing a small number of instruments you will be able to select your target MB in relation to your MM health issues and you will examine your readiness and commitment toward change. According to the provided information the app will be able to provide you tailored feedback for optimizing your goal efforts. Finally, within this section you will be able to evaluate of your progress by re-examining whether you your plans’ goals have been met in weekly basis.&lt;br>&lt;br>
        The next step is the “EDU” section. This is an educational guide which has been developed to help you understand the most essential issues about planning, in simple and plain language. Furthermore, a game has been designed to help you test your acquired knowledge. You can return and re-examine your knowledge at any time. Finally, at the end of this process you will be able to complete what is called a “counterfactual plan”. This is a plan, in the form of IF - THEN statement, that will be the driving force toward your multiple health behaviour changes.&lt;br>&lt;br>
        Having complete your “counterfactual thought” plan, you are to proceed at the “IF-THEN” section. This is where your expressed intentions, toward change (in relation to your readiness of change level) are going to take a “plan” form, in order to be implemented. Two main plans areas exist in this section. These are a) the Action and b) the Coping plans. Both plans, as any other within the app, will take the form of IF – THEN statement. This can be done by simply write down, in the proper area of IF and THEN parts, the plan that you want to achieve within the following week. Generally, it is expected to complete 4-5 health plans on the targeted health risk behaviours in weekly basis, as part of your self-management process.&lt;br>&lt;br>
        The “Agents” is the last section of the app. This is where you can be informed about which plans have been set up for which day of the upcoming week. When the set day/time has been arrived, an alarm will remind you the specific plan(s). Also, within this section you can see your accomplishments as well as where you should focus your future attention.&lt;br>&lt;br>\n
        &lt;span style=&quot;color:red;&quot;>The MM SNAP app has been developed as part of the requirements of a PhD that focuses on the use of Technologies on supporting behavioural changes.&lt;/span></string>
    <string name="what_this_up_is_for_text">The name MM-SNAP derives from the acronyms of Multimorbidity (MM- meaning people with two or more chronic illnesses) and those that correspond to the four most common health risk behaviours such as Smoking, Nutrition, Alcohol and Physical activity (SNAP).&lt;br>&lt;br>
        The MM SNAP is a mobile health application that aspires to support people’s with Multimorbidity self-management processes toward a healthier lifestyle. This happens by focusing on the development of effective behavioural change plans on those unhealthy behaviours that people with MM find hard to change.&lt;br>&lt;br>
        Specifically, by following a step by step process, MM SNAP users will learn to apply effective behavioural change IF – THEN plans, specific to their readiness of change level. Linking those IF – THEN plans to situations that suite best for them, the behavioural change process is becoming less demanding and tailored to users’ personal needs.&lt;br>&lt;br>
        Finally, an evaluation process will keep informed the MM SNAP users, regarding their successes and issues that need future attention. Self-management of chronic health issues, is an ongoing process, which MM-SNAP app manages to provide the tools for facing it.</string>
    <string name="about_multimorbidity_mm_text">Multimorbidity (MM) is the medical term for describing the situation where two or more chronic illnesses are experienced simultaneously by one person.  These diseases can be related or unrelated to each other. They can also have biological or psychological basis like diabetes or depression respectively, while their seriousness can vary from minor to life threatening ones (i.e. hypertension to cancer). Having MM is a burdensome situation that affects negatively people’s quality of life, expose them to higher health care usage and health care costs.&lt;br>&lt;br>
        MM is an increasingly health issue, with steady growing proportion worldwide. This is mainly due to MM link with demographic, socio-economic and lifestyle reasons. The transition toward older populations, the widening of social and health inequalities and unhealthy personal choices, regarding behavioural lifestyles, are now consider the major factors for someone to develop MM.&lt;br>&lt;br>
        Although the first two of the above-mentioned factors are considered stable, behavioural lifestyle is amenable toward change. More than that recent evidence have shown, that following an unhealthy way of living, account for the 40% of health inequalities, between those in higher and lower socio-economic status. On the contrary following health promoting behaviours people have been found to have 69% reduced odds of being MM.</string>
    <string name="about_multibehaviour_mb_text">Multibehaviours mean the co-existence of two or more health risk behaviours. Among them, Smoking, bad Nutrition, Alcohol abuse and Physical inactivity, are the most four common ones. Evidence indicate that most people are engaged with more than one health risk behaviour and about 25% among them are steadily expose themselves to more than three.&lt;br>&lt;br>
        Health risk behaviours (HRBs) are associated with the most serious and life threaten non-communicable diseases like cancers, cardiovascular diseases, COPD, diabetes, which altogether account for almost half of the disability-adjusted life years and preventable deaths worldwide. For example, smoking account for almost five million deaths worldwide each year, while bad nutrition and sedentary lifestyle are responsible for the 10% of all diseases burden.&lt;br>&lt;br>
        Mutlibehaviours increase the chances for someone to develop one or more of the abovementioned health incidences, while evidence suggest that are strongly associated with health inequalities. This means, that people from lower socio-economic position are more prone to expose themselves to multiple HRBs, and specifically the most dangerous ones (like smoking or excess alcohol drinking) than those from more affluent status.  Furthermore, studies have shown that 60% of health care usage and costs disproportionately account to a 15% of population who has developed a chronic condition(s) and still engage with one or more HRBs.&lt;br>&lt;br>
        So, since more and more evidence verify that worldwide chronic illnesses are mainly the consequence of people’s accumulated exposure to multiple HRBs; the redirection of health interventions targets toward Multibehaviours is a logical step.</string>
    <string name="what_is_the_if_then_statements">WHAT IS THE \"IF - THEN\" STATEMENTS</string>
    <string name="how_to_word_effective_if">HOW TO WORD EFFECTIVE \"IF\"</string>
    <string name="how_to_word_effective_then">HOW TO WORD EFFECTIVE \"THEN\"</string>
    <string name="if_then_knowledge_test_btn_txt">\"IF - THEN\" KNOWLEDGE TEST</string>
    <string name="today_s_plans">TODAY\'S PLANS</string>
    <string name="weekly_plans">WEEKLY PLANS</string>
    <string name="attention">ATTENTION</string>
    <string name="achievements">ACHIEVEMENTS</string>
    <string name="achievements_btn_txt">ACHIEVEMENTS</string>
    <string name="prompt_verify_new_password">Verify new password</string>
    <string name="prompt_new_password">New password</string>
    <string name="prompt_reset_password_key">Key</string>
    <string name="action_reset_password">Reset password</string>
</resources>