<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/app_bar_main">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="36dp"
        android:background="@drawable/rounded_rectangle"
        android:drawableLeft="@drawable/mmsnap_btn_img"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="Button"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/mm_snap_btn_text"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_rectangle"
        android:drawableLeft="@drawable/assessments_btn_img"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="Button"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        tools:text="@string/assessments_btn_txt"
        />

    <Button
        android:id="@+id/button4"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_rectangle"
        android:drawableLeft="@drawable/education_btn_img"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="Button"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        tools:text="@string/education_btn_txt"
        />

    <Button
        android:id="@+id/button5"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_rectangle"
        android:drawableLeft="@drawable/agents_btn_img"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="Button"
        android:textSize="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3"
        tools:text="@string/agents_btn_txt"
        />

    <Button
        android:id="@+id/button3"
        android:layout_width="0dp"
        android:layout_height="85dp"
        android:layout_marginEnd="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginStart="30dp"
        android:background="@drawable/rounded_rectangle"
        android:drawableLeft="@drawable/if_then_btn_img"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="Button"
        android:textSize="35dp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        tools:text="@string/if_then_btn_txt"
        />

</android.support.constraint.ConstraintLayout>