<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:background="@color/main_background_color"
    tools:context=".AgentsActivity"
    tools:showIn="@layout/activity_agents">

    <Button
        android:id="@+id/agents_todays_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mmsnap_btn_bkg"
        android:backgroundTint="@color/todays_plans"
        android:drawableRight="@drawable/subcategory_btn_img"
        android:drawableTint="#FFFFFF"
        android:paddingLeft="22dp"
        android:paddingRight="10dp"
        android:text="@string/today_s_plans"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/agents_weekly_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"/>

    <Button
        android:id="@+id/agents_weekly_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mmsnap_btn_bkg"
        android:backgroundTint="@color/weekly_plans"
        android:drawableRight="@drawable/subcategory_btn_img"
        android:drawableTint="#FFFFFF"
        android:paddingLeft="22dp"
        android:paddingRight="10dp"
        android:text="@string/weekly_plans"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/agents_attention_btn"
        app:layout_constraintEnd_toEndOf="@+id/agents_todays_btn"
        app:layout_constraintStart_toStartOf="@+id/agents_todays_btn"
        app:layout_constraintTop_toBottomOf="@+id/agents_todays_btn"
        app:layout_constraintVertical_chainStyle="spread"/>

    <Button
        android:id="@+id/agents_attention_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mmsnap_btn_bkg"
        android:backgroundTint="@color/attention"
        android:drawableRight="@drawable/subcategory_btn_img"
        android:drawableTint="#FFFFFF"
        android:paddingLeft="22dp"
        android:paddingRight="10dp"
        android:text="@string/attention"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/agents_achievements_btn"
        app:layout_constraintEnd_toEndOf="@+id/agents_weekly_btn"
        app:layout_constraintStart_toStartOf="@+id/agents_weekly_btn"
        app:layout_constraintTop_toBottomOf="@+id/agents_weekly_btn"
        app:layout_constraintVertical_chainStyle="spread"/>

    <Button
        android:id="@+id/agents_achievements_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/mmsnap_btn_bkg"
        android:backgroundTint="@color/achievements"
        android:drawableRight="@drawable/subcategory_btn_img"
        android:drawableTint="#FFFFFF"
        android:paddingLeft="22dp"
        android:paddingRight="10dp"
        android:text="@string/achievements"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/agents_attention_btn"
        app:layout_constraintStart_toStartOf="@+id/agents_attention_btn"
        app:layout_constraintTop_toBottomOf="@+id/agents_attention_btn"
        app:layout_constraintVertical_chainStyle="spread"/>
</android.support.constraint.ConstraintLayout>