<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EduActivity"
    tools:showIn="@layout/activity_edu">


    <!--<FrameLayout-->
        <!--android:id="@+id/button"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent">-->

        <!--<include layout="@layout/logo_edu"/>-->
    <!--</FrameLayout>-->


    <Button
        android:id="@+id/edu_what_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/mmsnap_btn_bkg"
        android:backgroundTint="@color/edu_what_btn"
        android:drawableRight="@drawable/subcategory_btn_img"
        android:drawableTint="#FFFFFF"
        android:paddingLeft="22dp"
        android:paddingRight="10dp"
        android:text="@string/what_is_the_if_then_statements"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edu_if_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"/>

    <Button
        android:id="@+id/edu_if_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/mmsnap_btn_bkg"
        android:backgroundTint="@color/edu_if_btn"
        android:drawableRight="@drawable/subcategory_btn_img"
        android:drawableTint="#FFFFFF"
        android:paddingLeft="22dp"
        android:paddingRight="10dp"
        android:text="@string/how_to_word_effective_if"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edu_then_btn"
        app:layout_constraintEnd_toEndOf="@+id/edu_what_btn"
        app:layout_constraintStart_toStartOf="@+id/edu_what_btn"
        app:layout_constraintTop_toBottomOf="@+id/edu_what_btn"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintVertical_chainStyle="spread"/>

    <Button
        android:id="@+id/edu_then_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/mmsnap_btn_bkg"
        android:backgroundTint="@color/edu_then_btn"
        android:drawableRight="@drawable/subcategory_btn_img"
        android:drawableTint="#FFFFFF"
        android:paddingLeft="22dp"
        android:paddingRight="10dp"
        android:text="@string/how_to_word_effective_then"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/edu_test_btn"
        app:layout_constraintEnd_toEndOf="@+id/edu_if_btn"
        app:layout_constraintStart_toStartOf="@+id/edu_if_btn"
        app:layout_constraintTop_toBottomOf="@+id/edu_if_btn"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintVertical_chainStyle="spread"/>

    <Button
        android:id="@+id/edu_test_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/mmsnap_btn_bkg"
        android:backgroundTint="@color/edu_test_btn"
        android:drawableRight="@drawable/subcategory_btn_img"
        android:drawableTint="#FFFFFF"
        android:paddingLeft="22dp"
        android:paddingRight="10dp"
        android:text="@string/if_then_knowledge_test_btn_txt"
        android:textColor="#FFFFFF"
        android:textSize="21dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edu_then_btn"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="@+id/edu_then_btn"
        app:layout_constraintTop_toBottomOf="@+id/edu_then_btn"
        app:layout_constraintVertical_chainStyle="spread"/>

</android.support.constraint.ConstraintLayout>